{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 283,
  "lineage": "41bcc761-c9d9-6814-ef34-dc04847a1df2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a1ac8851301281a",
            "domain": "vpc",
            "id": "eipalloc-03a1ac8851301281a",
            "network_border_group": "af-south-1",
            "public_dns": "ec2-13-246-60-238.af-south-1.compute.amazonaws.com",
            "public_ip": "13.246.60.238",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Database1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-060867d58b989c6be",
            "arn": "arn:aws:ec2:af-south-1:351642874049:instance/i-03dc167870d575164",
            "associate_public_ip_address": false,
            "availability_zone": "af-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03dc167870d575164",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-030eb77824c753387",
            "private_dns": "ip-10-0-2-55.af-south-1.compute.internal",
            "private_ip": "10.0.2.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bf90c28dad343b6c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de9f413045569f3e",
            "tags": {
              "Name": "ubuntu"
            },
            "tags_all": {
              "Name": "ubuntu"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09b103a2b6142ac5c"
            ]
          },
          "dependencies": [
            "aws_subnet.private1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Database2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-060867d58b989c6be",
            "arn": "arn:aws:ec2:af-south-1:351642874049:instance/i-020aefb187d451647",
            "associate_public_ip_address": false,
            "availability_zone": "af-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-020aefb187d451647",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04f37b84700fe8e80",
            "private_dns": "ip-10-0-4-63.af-south-1.compute.internal",
            "private_ip": "10.0.4.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-067bfb7d036e0a568",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-051254de05d1a8cfa",
            "tags": {
              "Name": "ubuntu2"
            },
            "tags_all": {
              "Name": "ubuntu2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09b103a2b6142ac5c"
            ]
          },
          "dependencies": [
            "aws_subnet.private2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-pure-private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-060867d58b989c6be",
            "arn": "arn:aws:ec2:af-south-1:351642874049:instance/i-03288a5c435d04029",
            "associate_public_ip_address": false,
            "availability_zone": "af-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03288a5c435d04029",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-008986275e9abddad",
            "private_dns": "ip-10-0-5-47.af-south-1.compute.internal",
            "private_ip": "10.0.5.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b21020b3b227cb96",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01709d47c72f2f5a3",
            "tags": {
              "Name": "Datebase"
            },
            "tags_all": {
              "Name": "Datebase"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09b103a2b6142ac5c"
            ]
          },
          "dependencies": [
            "aws_subnet.private3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-060867d58b989c6be",
            "arn": "arn:aws:ec2:af-south-1:351642874049:instance/i-0b48fefdce743bf53",
            "associate_public_ip_address": false,
            "availability_zone": "af-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b48fefdce743bf53",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05f205796c2941888",
            "private_dns": "ip-10-0-1-125.af-south-1.compute.internal",
            "private_ip": "10.0.1.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0be4a39dc187ccc66",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ecfbf22b2dbd540e",
            "tags": {
              "Name": "ubuntu"
            },
            "tags_all": {
              "Name": "ubuntu"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09b103a2b6142ac5c"
            ]
          },
          "dependencies": [
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-060867d58b989c6be",
            "arn": "arn:aws:ec2:af-south-1:351642874049:instance/i-0090bece0b0782bc2",
            "associate_public_ip_address": false,
            "availability_zone": "af-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0090bece0b0782bc2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08b3a2bfc87c99479",
            "private_dns": "ip-10-0-3-249.af-south-1.compute.internal",
            "private_ip": "10.0.3.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0514d65842582bd56",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ee6a81292f344411",
            "tags": {
              "Name": "ubuntu2"
            },
            "tags_all": {
              "Name": "ubuntu2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09b103a2b6142ac5c"
            ]
          },
          "dependencies": [
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:351642874049:internet-gateway/igw-0dfba1dbae9226ea1",
            "id": "igw-0dfba1dbae9226ea1",
            "owner_id": "351642874049",
            "tags": {
              "Name": "customer1-staging-igw"
            },
            "tags_all": {
              "Name": "customer1-staging-igw"
            },
            "vpc_id": "vpc-0f83002c071edbdbf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a1ac8851301281a",
            "connectivity_type": "public",
            "id": "nat-0b20cb29dc32b09d3",
            "network_interface_id": "eni-049863234e86afd58",
            "private_ip": "10.0.1.229",
            "public_ip": "13.246.60.238",
            "subnet_id": "subnet-0ecfbf22b2dbd540e",
            "tags": {
              "Name": "customer1-staging-nat-gw"
            },
            "tags_all": {
              "Name": "customer1-staging-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.main",
            "aws_internet_gateway.main",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:351642874049:route-table/rtb-0e8c1c7378dc8aecd",
            "id": "rtb-0e8c1c7378dc8aecd",
            "owner_id": "351642874049",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "customer1-staging-private-rt"
            },
            "tags_all": {
              "Name": "customer1-staging-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f83002c071edbdbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:351642874049:route-table/rtb-07ec9326254447952",
            "id": "rtb-07ec9326254447952",
            "owner_id": "351642874049",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b20cb29dc32b09d3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "customer1-staging-pivate-nat-rt"
            },
            "tags_all": {
              "Name": "customer1-staging-pivate-nat-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f83002c071edbdbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:351642874049:route-table/rtb-0b47739527408015a",
            "id": "rtb-0b47739527408015a",
            "owner_id": "351642874049",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dfba1dbae9226ea1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "customer1-staging-public-rt"
            },
            "tags_all": {
              "Name": "customer1-staging-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f83002c071edbdbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0761a4071f4c93e41",
            "route_table_id": "rtb-0e8c1c7378dc8aecd",
            "subnet_id": "subnet-0de9f413045569f3e"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa6abe5962d7435c",
            "route_table_id": "rtb-0e8c1c7378dc8aecd",
            "subnet_id": "subnet-051254de05d1a8cfa"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08255ba7159a83389",
            "route_table_id": "rtb-0b47739527408015a",
            "subnet_id": "subnet-0ecfbf22b2dbd540e"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024acb04f2c27e07c",
            "route_table_id": "rtb-0b47739527408015a",
            "subnet_id": "subnet-0ee6a81292f344411"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:351642874049:security-group/sg-0d56125c199723b8c",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d56125c199723b8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "351642874049",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f83002c071edbdbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:351642874049:subnet/subnet-0de9f413045569f3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0de9f413045569f3e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "351642874049",
            "tags": {
              "Name": "customer1-staging-private-subnet1"
            },
            "tags_all": {
              "Name": "customer1-staging-private-subnet1"
            },
            "vpc_id": "vpc-0f83002c071edbdbf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:351642874049:subnet/subnet-051254de05d1a8cfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-051254de05d1a8cfa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "351642874049",
            "tags": {
              "Name": "customer1-staging-private-subnet2"
            },
            "tags_all": {
              "Name": "customer1-staging-private-subnet2"
            },
            "vpc_id": "vpc-0f83002c071edbdbf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:351642874049:subnet/subnet-01709d47c72f2f5a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-01709d47c72f2f5a3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "351642874049",
            "tags": {
              "Name": "pure-private-1"
            },
            "tags_all": {
              "Name": "pure-private-1"
            },
            "vpc_id": "vpc-0f83002c071edbdbf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:351642874049:subnet/subnet-0ecfbf22b2dbd540e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ecfbf22b2dbd540e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "351642874049",
            "tags": {
              "Name": "customer1-staging-public-subnet1"
            },
            "tags_all": {
              "Name": "customer1-staging-public-subnet1"
            },
            "vpc_id": "vpc-0f83002c071edbdbf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:351642874049:subnet/subnet-0ee6a81292f344411",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0ee6a81292f344411",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "351642874049",
            "tags": {
              "Name": "customer1-staging-public-subnet2"
            },
            "tags_all": {
              "Name": "customer1-staging-public-subnet2"
            },
            "vpc_id": "vpc-0f83002c071edbdbf"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:351642874049:vpc/vpc-0f83002c071edbdbf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-006951ea4b21f23a6",
            "default_route_table_id": "rtb-046dc4e446c056eed",
            "default_security_group_id": "sg-09b103a2b6142ac5c",
            "dhcp_options_id": "dopt-0bb7380f042bbad27",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f83002c071edbdbf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-046dc4e446c056eed",
            "owner_id": "351642874049",
            "tags": {
              "Name": "customer1-staging-lab"
            },
            "tags_all": {
              "Name": "customer1-staging-lab"
            }
          }
        }
      ]
    }
  ]
}